[package]
name = "workfetch"
version = "0.2.0"
edition = "2026"
description = "A small terminal application for visualizing everyday information about your working hours."
repository = "https://github.com/KaiWesterschwiensterdt/workfetch"
authors = ["Kai KaiWesterschwiensterdt"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
toml = "0.8"
